--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "compile": "webpack",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
-    "compile-tests": "tsc -p . --outDir out",
+    "compile-tests": "tsc -p . --outDir out && npm run copy-fixtures",
+    "copy-fixtures": "mkdir -p out/test/fixtures && cp -r src/test/fixtures/* out/test/fixtures/ 2>/dev/null || true",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
@@ -46,6 +47,6 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "dicom.ts": "^1.3.0"
+    "dicom-parser": "^1.8.21"
   }
 }
