--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,17 @@
 	"typescript.tsc.autoDetect": "off",
 	// File encoding settings to prevent character corruption
 	"files.encoding": "utf8",
-	"files.autoGuessEncoding": false
+	"files.autoGuessEncoding": false,
+	// Auto format on save
+	"editor.formatOnSave": true,
+	"editor.codeActionsOnSave": {
+		"source.fixAll.eslint": "explicit"
+	},
+	// Default formatter for different file types
+	"[typescript]": {
+		"editor.defaultFormatter": "vscode.typescript-language-features"
+	},
+	"[javascript]": {
+		"editor.defaultFormatter": "vscode.typescript-language-features"
+	}
 }
